<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name_kor"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/nickname_write"
        android:textColor="#fff"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/infoWriteActivityNameInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/infoWriteActivityNameInputUnderline"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            app:srcCompat="@drawable/login_textline_nonfocus" />
    </FrameLayout>

    <TextView
        android:id="@+id/infoWriteActivityNameCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="55dp"
        android:text="@string/nickname_write_count"
        android:textColor="#fff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender_pick"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/infoWriteActivityGenderBtnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/infoWriteActivityManBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:buttonTint="#FF0000"
                android:text="@string/gender_man"
                android:textColor="#fff" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/infoWriteActivityWomanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#ff0000"
                android:text="@string/gender_woman"
                android:textColor="#fff" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/birth_pick"
        android:textColor="#fff"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/infoWriteActivityBirthInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="10"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/infoWriteActivityBirthInputUnderline"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            app:srcCompat="@drawable/login_textline_nonfocus" />

    </FrameLayout>

    <TextView
        android:id="@+id/infoWriteActivityBirthCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="55dp"
        android:text="@string/birth_write_count"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/infoWriteActivityNextBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#000"
        android:text="OK"
        android:textColor="#fff" />

</LinearLayout>